# Huntsman

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: profile.example.yml
huntsman_mcp/: __init__.py  __main__.py  auth.py  browser.py  config.py  converter.py  exceptions.py  reddit.py  scraper.py  server.py
skill/: LICENSE.txt  SKILL.md  SYSTEM_PROMPT.md  _shared.md
skill/modes/: audit.md  evaluate.md  interview.md  onboarding.md  outreach.md  research.md
tests/: test_auth.py  test_converter.py  test_release_helper.py  test_scrape_company.py  test_scraper_helpers.py  test_server_tools.py
tools/: __init__.py  release.py
